[workspace]
members = ["packages/*"]

resolver = "2"

[workspace.package]
version = "3.0.0"

[workspace.dependencies]
#cw-utils = { path = "packages/cw-utils", version = "3.0.0" }
#cw-storage-plus    = { git = "https://github.com/permissionlessweb/cw-storage-plus", branch = "mvp" }
#cosmwasm-schema = { git = "https://github.com/permissionlessweb/cosmwasm", branch = "mvp", package = "cosmwasm-schema" }
#cosmwasm-std = { git = "https://github.com/permissionlessweb/cosmwasm", branch = "mvp", features = ["std"] }

cw-utils          = { path = "../zk-cw-minus/packages/cw-utils" }
cw-storage-plus  = { path = "../zk-storage-plus" }
cosmwasm-schema   = { path = "../zk-cosmwasm/mvp/packages/schema" }
cosmwasm-std      = { path = "../zk-cosmwasm/mvp/packages/std" }

thiserror = "2.0.12"
schemars = "0.8.4"
semver = { version = "1.0.26", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
