[workspace]
members = ["packages/*"]

resolver = "2"

[workspace.package]
version = "3.0.0"

[workspace.dependencies]
cw-utils = { path = "../ZK/cw/zk-cw-minus/packages/cw-utils" }
cosmwasm-schema = { path = "../ZK/cw/zk-cosmwasm/packages/schema" }
cosmwasm-std = { path = "../ZK/cw/zk-cosmwasm/packages/std" }
cw-storage-plus = { path = "../ZK/cw/zk-storage-plus" }
thiserror = "2.0.12"
schemars = "0.8.4"
semver = { version = "1.0.26", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
