[workspace]
members = ["packages/*"]

resolver = "2"

[workspace.package]
version = "3.0.0"

[workspace.dependencies]
cw-utils = { path = "../ZK/cw/zk-cw-minus/packages/cw-utils" }
cosmwasm-schema = { git = "https://github.com/permissionlessweb/cosmwasm", branch = "zk-mvp" }
cosmwasm-std = { git = "https://github.com/permissionlessweb/cosmwasm", branch = "zk-mvp" }
cw-storage-plus = { git = "https://github.com/permissionlessweb/cw-storage-plus", branch = "zk-mvp" }
thiserror = "2.0.12"
schemars = "0.8.4"
semver = { version = "1.0.26", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
